fix: missing space in search

--- a/packages/catalog-search/src/styles/_SearchSuggestions.scss
+++ b/packages/catalog-search/src/styles/_SearchSuggestions.scss
@@ -29,6 +29,9 @@
   &:hover{
     color: white;
   }
+  &:not(:first-child) {
+    margin-left: 4px; // add space between _highlightResult.title.value hits
+  }
 }
   div{
     display: flex;
